fix: output shifting on focus

--- a/src/components/output.css
+++ b/src/components/output.css
@@ -24,6 +24,7 @@
 	cursor: copy;
 	text-overflow: ellipsis;
 	user-select: text;
+	border: outset 2px grey;
 }
 
 .output>.js:focus {
